--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h3>Contact</h3>
+        <h1>Contact us to get free support</h1>
+    </header>
+    <body>
+        <form class="description">
+            <textarea>Description</textarea>
+        </form>
+        <form class="about">
+            <input type="text"  name="Subject" id="Subject" placeholder="Subject"><br><br>
+            <input type="text"  name="name/surname" id="name/surname" placeholder="Name/Surname"><br><br>
+            <input type="email" name="email" id="email"  placeholder="Email"><br><br>
+            <input type="submit" name="send" id="send"  value="Send"><br><br>
+        </form>
+        <div class="contacts">
+            <div class="Email">
+                
+            </div>
+            <div class="Phone"></div>
+            <div class="Location"></div>
+        </div>
+    </body>
+   
 </body>
 </html>
