add images and made page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h3>Contact</h3>
         <h1>Contact us to get free support</h1>
     </header>
-    <body>
+    <main>
         <form class="description">
             <textarea>Description</textarea>
         </form>
@@ -21,15 +21,71 @@
             <input type="text"  name="name/surname" id="name/surname" placeholder="Name/Surname"><br><br>
             <input type="email" name="email" id="email"  placeholder="Email"><br><br>
             <input type="submit" name="send" id="send"  value="Send"><br><br>
-        </form>
+        </form> <br><br>
         <div class="contacts">
             <div class="Email">
-                
+                <div class="circle">
+                <img src="images/Frame.svg"></div><br>
+                <h2>Email</h2><br>
+                <h4>education@yahoo.edu.ge</h4><br>
+                <h4>edu.e.education@yahoo.edu.ge</h4>
             </div>
-            <div class="Phone"></div>
-            <div class="Location"></div>
+            <div class="Phone">
+                <div class="circle">
+                <img src="images/Phone 2.svg"></div><br>
+                <h2>Phone</h2><br>
+                <h4>+995 591 66 6456</h4><br>
+                <h4>+995 591 66 6876</h4>
+            </div>
+            <div class="Location">
+                <div class="circle">
+                    <img src="images/Frame (1).svg"></div><br>
+                    <h2>Location</h2><br>
+                    <h4>Mail str, Chicago iinois</h4><br>
+                    <h4>Main street, New York City</h4>
+            </div>
+        </div><br>
+        <h3>Photos</h3>
+        <p>See our latest photos
+            from restaurant and hotel <p>
+        <div class="images">
+            <img src="images/Rectangle 6.svg">
+            <img src="images/Rectangle 7.svg">
+            <img src="images/Rectangle 8.svg">
         </div>
-    </body>
+</main>
+<footer>
+    <div class="footer">
+        <p>Zwtta Hotels</p>
+        <h6>Our hotel in on teh huge quality
+            and proffesionalism and with hard
+            work and cearing. You can accept
+            only the best services from our stuff</h6>
+        <img src="images/Ellipse 5.svg">
+        <img src="images/Ellipse 6.svg">
+        <img src="images/Ellipse 7.svg">
+    </div>
+    <div class="end">
+        <h5>Useful links</h5>
+        <a>Blog</a>
+        <a>Rooms</a>
+        <a>Gift Card</a>
+        <a>Testimonials</a>
+    </div>
+    <div class="end">
+        <h5>Privacy</h5>
+        <a>Career</a>
+        <a>About us</a>
+        <a>Contact us</a>
+        <a>Services</a>
+    </div>
+    <div class="ends">
+        <h5>Contact Info</h5>
+        <img src="images/Frame.svg"><h4>info@yahoo.com</h4>
+        <img src="images/phone 2.svg"><h4>+ 995 591111 999</h4>
+        <img src="images/Frame (1).svg"><h4>Main str. Chicago Illinois</h4>
+    </div>
+</footer>
    
 </body>
 </html>
