--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <header>
@@ -46,8 +47,8 @@
             </div>
         </div><br>
         <h3>Photos</h3>
-        <p>See our latest photos
-            from restaurant and hotel <p>
+       <p>See our latest photos
+            from restaurant and hotel </p>
         <div class="images">
             <img src="images/Rectangle 6.svg">
             <img src="images/Rectangle 7.svg">
@@ -55,35 +56,38 @@
         </div>
 </main>
 <footer>
+    <div class="end">
     <div class="footer">
-        <p>Zwtta Hotels</p>
+        <p>Zwtta Hotels</p><br>
         <h6>Our hotel in on teh huge quality
             and proffesionalism and with hard
             work and cearing. You can accept
-            only the best services from our stuff</h6>
+            only the best services from our stuff</h6><br>
         <img src="images/Ellipse 5.svg">
         <img src="images/Ellipse 6.svg">
         <img src="images/Ellipse 7.svg">
     </div>
-    <div class="end">
-        <h5>Useful links</h5>
-        <a>Blog</a>
-        <a>Rooms</a>
-        <a>Gift Card</a>
+    <div class="end1">
+        <h5>Useful links</h5><br>
+        <a>Blog</a><br>
+        <a>Rooms</a><br>
+        <a>Gift Card</a><br>
         <a>Testimonials</a>
     </div>
-    <div class="end">
-        <h5>Privacy</h5>
-        <a>Career</a>
-        <a>About us</a>
-        <a>Contact us</a>
+    <div class="end2">
+        <h5>Privacy</h5><br>
+        <a>Career</a><br>
+        <a>About us</a><br>
+        <a>Contact us</a><br>
         <a>Services</a>
     </div>
-    <div class="ends">
-        <h5>Contact Info</h5>
-        <img src="images/Frame.svg"><h4>info@yahoo.com</h4>
-        <img src="images/phone 2.svg"><h4>+ 995 591111 999</h4>
-        <img src="images/Frame (1).svg"><h4>Main str. Chicago Illinois</h4>
+    <div class="end3">
+        <h5>Contact Info</h5><br><br>
+       <div class="end4"> 
+        <div class="one"><img src="images/Frame.svg"><h4>info@yahoo.com</h4></div><br><br>
+        <div class="two"><img src="images/phone 2.svg"><h4>+ 995 591111 999</h4></div><br><br>
+        <div class="three"><img src="images/Frame (1).svg"><h4>Main str. Chicago Illinois</h4></div></div><br><br>
+    </div>
     </div>
 </footer>
    
