--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h5>Contact Info</h5><br><br>
        <div class="end4"> 
         <div class="one"><img src="images/Frame.svg"><h4>info@yahoo.com</h4></div><br><br>
-        <div class="two"><img src="images/phone 2.svg"><h4>+ 995 591111 999</h4></div><br><br>
+        <div class="two"><img src="images/Phone 2.svg"><h4>+ 995 591111 999</h4></div><br><br>
         <div class="three"><img src="images/Frame (1).svg"><h4>Main str. Chicago Illinois</h4></div></div><br><br>
     </div>
     </div>
